--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ uniswap-lens = { version = "0.12", optional = true }
 uniswap-sdk-core = "4.0.0"
 
 [features]
-default = []
+default = ["std"]  # 修改这行，添加 "std"
 extensions = [
     "alloy",
     "base64",
@@ -96,3 +96,4 @@ required-features = ["extensions"]
 [[example]]
 name = "nonfungible_position_manager"
 required-features = ["extensions"]
+
